--- a/locale/en/LC_MESSAGES/django.po
+++ b/locale/en/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2021-04-25 23:13+0900\n"
+"POT-Creation-Date: 2021-04-25 23:24+0900\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -22,101 +22,225 @@ msgstr ""
 msgid "家事"
 msgstr "House chore"
 
-#: app/templates/app/404.html:8 users/templates/users/500.html:8
+#: templates/404.html:8
 msgid "500エラー"
 msgstr "500 Error"
 
-#: app/templates/app/500.html:8 users/templates/users/404.html:8
+#: templates/500.html:8
 msgid "404エラー"
 msgstr "404 Error"
 
-#: app/templates/app/base.html:35 app/templates/app/modal.html:38
-#: users/templates/users/base.html:39 users/templates/users/modal.html:9
+#: templates/app/base.html:35 templates/app/modal.html:38
+#: templates/users/base.html:39 templates/users/modal.html:9
 msgid "ヘルプセンター"
 msgstr "Help Center"
 
-#: app/templates/app/modal.html:8
+#: templates/app/modal.html:8
 msgid "表示させたいユーザー名を入力してください"
 msgstr "Please enter the user name you want to display."
 
-#: app/templates/app/modal.html:21 app/templates/app/modal.html:54
-#: users/templates/users/modal.html:25
+#: templates/app/modal.html:21 templates/app/modal.html:54
+#: templates/users/modal.html:25
 msgid "キャンセル"
 msgstr "Cancel"
 
-#: app/templates/app/modal.html:24
+#: templates/app/modal.html:24
 msgid "設定"
 msgstr "Set"
 
-#: app/templates/app/modal.html:48 users/templates/users/modal.html:19
+#: templates/app/modal.html:48 templates/users/modal.html:19
 msgid "お問い合わせ内容"
 msgstr "Contents of inquiry"
 
-#: app/templates/app/modal.html:57 app/templates/app/room.html:60
-#: users/templates/users/modal.html:28
-#: users/templates/users/signup_doing.html:24
+#: templates/app/modal.html:57 templates/app/room.html:60
+#: templates/users/modal.html:28 templates/users/signup_doing.html:24
 msgid "送信"
 msgstr "Submit"
 
-#: app/templates/app/room.html:10
+#: templates/app/room.html:10
 msgid "このボタンは各ハウスの管理者にのみ見えています"
 msgstr "This button is only visible to the manager of each house."
 
-#: app/templates/app/room.html:15
+#: templates/app/room.html:15
 msgid "今週の家事を割り振る"
 msgstr "Allocate this week's housechore"
 
-#: app/templates/app/room.html:20
+#: templates/app/room.html:20
 msgid "共益費を再度表示する"
 msgstr "Show common fee again"
 
-#: app/templates/app/room.html:28
+#: templates/app/room.html:28
 msgid "今週"
 msgstr "Housework that"
 
-#: app/templates/app/room.html:30
+#: templates/app/room.html:30
 msgid "さんが担当する家事"
 msgstr "is in charge of this week"
 
-#: app/templates/app/room.html:33
+#: templates/app/room.html:33
 msgid "終わったらチェックを入れて"
 msgstr "Check it when you have done and"
 
-#: app/templates/app/room.html:35
+#: templates/app/room.html:35
 msgid "送信ボタンを押してください"
 msgstr "press the submit button."
 
-#: app/templates/app/room.html:51
+#: templates/app/room.html:51
 msgid "公共費"
 msgstr "Public expenses"
 
-#: app/templates/app/room.html:53
+#: templates/app/room.html:53
 msgid "円 / 毎月"
 msgstr "yen / month"
 
-#: app/templates/app/room.html:55
+#: templates/app/room.html:55
 msgid "日"
 msgstr "date"
 
-#: app/templates/app/room.html:68
+#: templates/app/room.html:68
 msgid "ユーザー名を設定する"
 msgstr "Set username"
 
-#: app/templates/app/room.html:71
+#: templates/app/room.html:71
 msgid "ハウスを間違えましたか？"
 msgstr "Did you make a mistake in the house?"
 
-#: app/templates/app/room.html:76 users/templates/users/index.html:34
+#: templates/app/room.html:76 templates/users/index.html:34
 msgid "ログアウト"
 msgstr "Logout"
 
-#: app/templates/app/room.html:80 users/templates/users/index.html:38
+#: templates/app/room.html:80 templates/users/index.html:38
 msgid "ハウス管理"
 msgstr "House manage"
 
-#: app/templates/app/room.html:84 users/templates/users/index.html:42
+#: templates/app/room.html:84 templates/users/index.html:42
 msgid "ハウス管理者権限の申請"
 msgstr "Apply for house administrator authority"
+
+#: templates/users/axes_locked.html:8
+msgid "ログインに7回以上失敗したため、"
+msgstr "Your account has been locked for 1 hour"
+
+#: templates/users/axes_locked.html:10
+msgid "アカウントが1時間ロックされました。"
+msgstr "because you failed to log in more than 7 times."
+
+#: templates/users/index.html:9
+msgid "住んでいるハウスを選択してください"
+msgstr "Please select the house you live in."
+
+#: templates/users/index.html:16
+msgid "このハウスメンバーとして登録"
+msgstr "a member of this house"
+
+#: templates/users/index.html:21
+msgid "あなたは"
+msgstr "You are registered as"
+
+#: templates/users/index.html:23
+msgid "ハウスメイトとして登録しています"
+msgstr "housemate"
+
+#: templates/users/index.html:27
+msgid "割り振られた家事を見る"
+msgstr "View assigned housechore"
+
+#: templates/users/index.html:46
+msgid "退会"
+msgstr "Withdraw"
+
+#: templates/users/login.html:8 templates/users/login.html:26
+#: templates/users/signup.html:42
+msgid "ログイン"
+msgstr "Login"
+
+#: templates/users/login.html:15
+msgid "Emailかパスワードが間違っています。"
+msgstr "The email or password is incorrect."
+
+#: templates/users/login.html:21 templates/users/signup.html:16
+msgid "パスワード:"
+msgstr "Password:"
+
+#: templates/users/login.html:32
+msgid "パスワードを忘れましたか？"
+msgstr "Did you forget your password?"
+
+#: templates/users/login.html:38
+msgid "Googleでログイン"
+msgstr "Login with google"
+
+#: templates/users/login.html:43
+msgid "新規登録はこちらから"
+msgstr "New registration is here"
+
+#: templates/users/login.html:48 templates/users/signup.html:47
+msgid "プライバシーポリシー"
+msgstr "privacy policy"
+
+#: templates/users/login.html:51 templates/users/signup.html:50
+msgid "利用規約"
+msgstr "Terms of service"
+
+#: templates/users/login.html:55 templates/users/signup.html:54
+msgid "ハウス管理者"
+msgstr "House manager"
+
+#: templates/users/pls_activate.html:8
+msgid "あなたのメールアドレス宛てに本登録用のメールを送りました。"
+msgstr ""
+"We have sent an e-mail for official registration to your e-mail address."
+
+#: templates/users/pls_activate.html:11
+msgid "メールのURLをクリックして、本登録を完了させてください。"
+msgstr "Click the URL in the email to complete the main registration."
+
+#: templates/users/signup.html:8 templates/users/signup.html:30
+msgid "新規登録"
+msgstr "Sign up"
+
+#: templates/users/signup.html:21
+msgid "パスワード(確認):"
+msgstr "Password (confirmation):"
+
+#: templates/users/signup.html:37
+msgid "Googleで新規登録"
+msgstr "New registration on Google"
+
+#: templates/users/signup_doing.html:8
+msgid "2段階認証を実行します。"
+msgstr "We are going to do two-step authentication."
+
+#: templates/users/signup_doing.html:11
+msgid ""
+"以下のQRコードを読み込んで、ワンタイムパスワードを下に入力して送信してくださ"
+"い。"
+msgstr ""
+"Please read the QR code below and enter the one-time password below to send."
+
+#: templates/users/signup_doing.html:14
+msgid ""
+"※ このページを閉じると<br>再度QRコードを表示出来ないためご注意ください。"
+msgstr ""
+"※ Please note that if you close this page, you will not be able to display "
+"the QR code again."
+
+#: templates/users/signup_done.html:8
+msgid "本登録が完了しました。"
+msgstr "This registration is complete."
+
+#: templates/users/signup_done.html:11
+msgid "ログインページへ"
+msgstr "Go to login page"
+
+#: templates/users/withdraw.html:8
+msgid "アカウントがdeactivateされ、退会処理が完了しました。"
+msgstr ""
+"Your account has been deactivated and the withdrawal process is complete."
+
+#: templates/users/withdraw.html:11
+msgid "ご利用ありがとうございました。"
+msgstr "Thank you for using."
 
 #: users/admin.py:26
 msgid "Permissions"
@@ -153,128 +277,3 @@ msgstr "not assigned"
 #: users/models.py:65
 msgid "詳細なし"
 msgstr "no description"
-
-#: users/templates/users/axes_locked.html:8
-msgid "ログインに7回以上失敗したため、"
-msgstr "Your account has been locked for 1 hour"
-
-#: users/templates/users/axes_locked.html:10
-msgid "アカウントが1時間ロックされました。"
-msgstr "because you failed to log in more than 7 times."
-
-#: users/templates/users/index.html:9
-msgid "住んでいるハウスを選択してください"
-msgstr "Please select the house you live in."
-
-#: users/templates/users/index.html:16
-msgid "このハウスメンバーとして登録"
-msgstr "a member of this house"
-
-#: users/templates/users/index.html:21
-msgid "あなたは"
-msgstr "You are registered as"
-
-#: users/templates/users/index.html:23
-msgid "ハウスメイトとして登録しています"
-msgstr "housemate"
-
-#: users/templates/users/index.html:27
-msgid "割り振られた家事を見る"
-msgstr "View assigned housechore"
-
-#: users/templates/users/index.html:46
-msgid "退会"
-msgstr "Withdraw"
-
-#: users/templates/users/login.html:8 users/templates/users/login.html:26
-#: users/templates/users/signup.html:42
-msgid "ログイン"
-msgstr "Login"
-
-#: users/templates/users/login.html:15
-msgid "Emailかパスワードが間違っています。"
-msgstr "The email or password is incorrect."
-
-#: users/templates/users/login.html:21 users/templates/users/signup.html:16
-msgid "パスワード:"
-msgstr "Password:"
-
-#: users/templates/users/login.html:32
-msgid "パスワードを忘れましたか？"
-msgstr "Did you forget your password?"
-
-#: users/templates/users/login.html:38
-msgid "Googleでログイン"
-msgstr "Login with google"
-
-#: users/templates/users/login.html:43
-msgid "新規登録はこちらから"
-msgstr "New registration is here"
-
-#: users/templates/users/login.html:48 users/templates/users/signup.html:47
-msgid "プライバシーポリシー"
-msgstr "privacy policy"
-
-#: users/templates/users/login.html:51 users/templates/users/signup.html:50
-msgid "利用規約"
-msgstr "Terms of service"
-
-#: users/templates/users/login.html:55 users/templates/users/signup.html:54
-msgid "ハウス管理者"
-msgstr "House manager"
-
-#: users/templates/users/pls_activate.html:8
-msgid "あなたのメールアドレス宛てに本登録用のメールを送りました。"
-msgstr ""
-"We have sent an e-mail for official registration to your e-mail address."
-
-#: users/templates/users/pls_activate.html:11
-msgid "メールのURLをクリックして、本登録を完了させてください。"
-msgstr "Click the URL in the email to complete the main registration."
-
-#: users/templates/users/signup.html:8 users/templates/users/signup.html:30
-msgid "新規登録"
-msgstr "Sign up"
-
-#: users/templates/users/signup.html:21
-msgid "パスワード(確認):"
-msgstr "Password (confirmation):"
-
-#: users/templates/users/signup.html:37
-msgid "Googleで新規登録"
-msgstr "New registration on Google"
-
-#: users/templates/users/signup_doing.html:8
-msgid "2段階認証を実行します。"
-msgstr "We are going to do two-step authentication."
-
-#: users/templates/users/signup_doing.html:11
-msgid ""
-"以下のQRコードを読み込んで、ワンタイムパスワードを下に入力して送信してくださ"
-"い。"
-msgstr ""
-"Please read the QR code below and enter the one-time password below to send."
-
-#: users/templates/users/signup_doing.html:14
-msgid ""
-"※ このページを閉じると<br>再度QRコードを表示出来ないためご注意ください。"
-msgstr ""
-"※ Please note that if you close this page, you will not be able to display "
-"the QR code again."
-
-#: users/templates/users/signup_done.html:8
-msgid "本登録が完了しました。"
-msgstr "This registration is complete."
-
-#: users/templates/users/signup_done.html:11
-msgid "ログインページへ"
-msgstr "Go to login page"
-
-#: users/templates/users/withdraw.html:8
-msgid "アカウントがdeactivateされ、退会処理が完了しました。"
-msgstr ""
-"Your account has been deactivated and the withdrawal process is complete."
-
-#: users/templates/users/withdraw.html:11
-msgid "ご利用ありがとうございました。"
-msgstr "Thank you for using."
